# smart-router-multi-modal

./: .coverage  .gitignore  README.md  benchmark_routerarena.py  benchmark_vl_routerbench.py  config.yaml  finetune_lmsys.py  generate_benchmark_config.py  index.html  models_api.py  pyproject.toml  requirements.txt  router.py  run.sh  serve_general.py  serve_models.py  server.py  setup.sh  signals.py  task_classifier.py  tools.py  trace_dashboard.html  tracer.py
benchmarks/: benchmark_routerarena.py  benchmark_vl_routerbench.py  comprehensive_eval.py  fill_claude_gt.py  fill_fast.py  fill_gemini_gt.py  generate_benchmark_config.py  pathvqa.py  pubmedqa.py  real_dataset_eval.py  real_image_benchmark.py  scenario_tests.py  train_embeddings.py
benchmarks/results/: benchmark_results.json  comprehensive_eval.json  routerarena.json  scenario_tests.json  vl_routerbench.json
config/: config.yaml  config_routerarena.yaml  models.yaml  probes.yaml  prompt_templates.yaml  safety.yaml  taxonomy.yaml  tools.yaml
configs/: vl_routerbench.yaml
dashboard/: dashboard.html  index.html
data/: routing_dataset.csv
optimize/: __init__.py  dspy_optimizer.py  evaluate.py
presentation/: DEMO_SCRIPT.md  create_pptx.py  slides.html  slides.pptx
src/: __init__.py  __main__.py  explainability.py  fallback_classifier.py  models.py  models_api.py  router.py  server.py  tracer.py
tests/: conftest.py  test_api_flows.py  test_gpu_flows.py
training/: finetune_lmsys.py  finetune_router.py  train_router_embeddings.py  train_router_with_queries.py  train_routing_embeddings.py
(+25 files in other folders)
